--- a/repsaj.bots.domoticz.tests/repsaj.bots.domoticz.tests.csproj
+++ b/repsaj.bots.domoticz.tests/repsaj.bots.domoticz.tests.csproj
@@ -4,11 +4,9 @@
     <TargetFramework>netcoreapp1.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
-  </PropertyGroup>
 
-  <ItemGroup>
-    <Compile Include="ApiRequestTests" />
-  </ItemGroup>
+    <RootNamespace>Repsaj.Bots.Domoticz.Tests</RootNamespace>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170517-02" />
@@ -18,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\repsaj.bots.domoticz.app.logic\repsaj.bots.domoticz.app.logic.csproj" />
+    <ProjectReference Include="..\repsaj.bots.domoticz.logic\repsaj.bots.domoticz.logic.csproj" />
   </ItemGroup>
 
 </Project>
