--- a/repsaj.bots.domoticz.bot/packages.config
+++ b/repsaj.bots.domoticz.bot/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.6.0" targetFramework="net462" />
+  <package id="Autofac.Extras.CommonServiceLocator" version="4.0.0" targetFramework="net462" />
   <package id="Chronic.Signed" version="0.3.2" targetFramework="net462" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.Azure.DocumentDB" version="1.11.0" targetFramework="net462" />
