Major update in functionality. Bridge is now working, just needs refinement here and there.

--- a/repsaj.bots.domoticz.app/repsaj.bots.domoticz.app.csproj
+++ b/repsaj.bots.domoticz.app/repsaj.bots.domoticz.app.csproj
@@ -96,6 +96,8 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Design\ApiConnector.cs" />
+    <Compile Include="Design\DomoticzManager.cs" />
+    <Compile Include="Design\RequestHandler.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
