--- a/repsaj.bots.domoticz.bot/Web.config
+++ b/repsaj.bots.domoticz.bot/Web.config
@@ -34,15 +34,19 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Bot.Connector" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.8.5.0" newVersion="3.8.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.8.5.0" newVersion="3.8.5.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Bot.Builder" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.8.5.0" newVersion="3.8.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.8.5.0" newVersion="3.8.5.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Bot.Builder.Autofac" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.8.5.0" newVersion="3.8.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Bot.Builder.History" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.4.0" newVersion="3.0.4.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
